--- a/contact.html
+++ b/contact.html
@@ -1,39 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Frontend Mentor | PayAPI Website Challenge</title>
-  </head>
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
+  <link rel="stylesheet" href="contact.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC`" crossorigin="anonymous">
+  <title>Contact | PayAPI Website Challenge</title>
+</head>
 
-  <body>
-    Pricing
-    About
-    Contact
-    Schedule a Demo
+<body>
+  <nav>
 
-    Submit a help request and we’ll get in touch shortly.
-    
-    Name
-    Email Address
-    Company Name
-    Title
-    Message
-    Stay up-to-date with company announcements and updates to our API
-    Submit
+    <div class="logo">
+      <img src="./assets/shared/desktop/logo.svg" alt="">
+    </div>
 
-    Join the thousands of innovators already building with us
+    <div class="nav-list-container">
+      <ul class="list-inline">
+        <li class="list-inline-item">
+          <a href="pricing.html" class="text-muted">Pricing</a>
+        </li>
 
-    Ready to start? 
-    Enter email address 
-    Schedule a Demo
+        <li class="list-inline-item">
 
-    Pricing
-    About
-    Contact
-  </body>
+          <a href="about.html" class="text-muted">About</a>
+        </li>
+        <li class="list-inline-item">
+
+          <a href="contact.html" class="text-muted">Contact</a>
+        </li>
+      </ul>
+
+      <button type="submit" class="butn-primary">Schedule a Demo</button>
+
+    </div>
+
+
+    <div class="menu">
+      <img src="./assets/shared/mobile/menu.svg" alt="">
+    </div>
+
+
+
+  </nav>
+
+
+  <header>
+    <h1>Submit a help request and we’ll get in touch shortly.</h1>
+  </header>
+
+
+
+  <main class="row">
+
+    <section class="col-sm-12 col-md-8 col-lg-6 row mx-auto px-3 gy-3 pt-4">
+
+      <form action="">
+
+        <div>
+          <label for="formname">Name</label>
+          <input type="text" name="" id="formname">
+        </div>
+
+
+        <div>
+          <label for="formemail">Email Address</label>
+          <input type="email" name="" id="formemail">
+
+        </div>
+
+
+        <div>
+          <label for="companyname">Company Name</label>
+          <input type="text" name="" id="companyname">
+        </div>
+
+
+
+        <div>
+          <label for="formtitle">Title</label>
+          <input type="text" name="" id="formtitle">
+        </div>
+
+
+
+        <div>
+          <label for="textarea">Message</label>
+          <textarea name="" id="textarea" style="width: 100%; height: 50px"></textarea>
+        </div>
+
+
+
+        <div>
+          <label for="checkbox"> Stay up-to-date with company announcements and updates to our API
+            Submit</label>
+          <input type="checkbox" name="" id="checkbox">
+        </div>
+      </form>
+
+
+
+
+
+
+    </section>
+
+
+
+    <section class="col-sm-12 col-md-8 col-lg-6 row mx-auto px-3 gy-3 pt-4">
+
+      <div>
+        <h2>
+          Join the thousands of innovators already building with us
+        </h2>
+      </div>
+
+
+
+      <div class="col-6 col-sm-6 col-md-4 mb-3">
+        <img src="./assets/shared/desktop/icon2/tesla.svg" alt="tesla" width="90%">
+      </div>
+
+      <div class="col-6 col-sm-6 col-md-4 mb-3">
+        <img src="./assets/shared/desktop/icon2/microsoft.svg" alt="microsoft">
+      </div>
+
+      <div class="col-6 col-sm-6 col-md-4 mb-3">
+        <img src="./assets/shared/desktop/icon2/hewlett-packard.svg" alt="hp" width="90%">
+      </div>
+
+      <div class="col-6 col-sm-6 col-md-4 mb-3">
+        <img src="./assets/shared/desktop/icon2/oracle.svg" alt="oracle" width="90%">
+      </div>
+
+
+      <div class="col-6 col-sm-6 col-md-4 mb-3">
+        <img src="./assets/shared/desktop/icon2/google.svg" alt="google" width="90%">
+      </div>
+
+      <div class="col-6 col-sm-6 col-md-4 mb-3">
+        <img src="./assets/shared/desktop/icon2/nvidia.svg" alt="nvidia" width="90%">
+      </div>
+    </section>
+
+  </main>
+
+
+
+  <aside id="aside_input" class="row">
+    <div class="col-12 col-sm-12 col-md-4 mt-4">
+      <h2>
+        Ready to start?
+      </h2>
+    </div>
+
+    <div class="input pt-4 col-12 col-sm-12 col-md-4 mb-5">
+      <input type="text" class="mail_input" placeholder="Enter email address">
+      <button type="submit" class="butn-primary">Schedule a Demo</button>
+    </div>
+
+  </aside>
+
+
+  <footer>
+    <ul class="footer-list">
+      <li class="mb-4">
+        <div class="footer-logo">
+          <img src="./assets/shared/desktop/logo.svg" alt="">
+        </div>
+      </li>
+
+      <li class="mb-4"><a href="pricing.html">Pricing</a></li>
+      <li class="mb-4"><a href="about.html">About</a></li>
+      <li class="mb-4"><a href="contact.html">Contact</a></li>
+    </ul>
+
+    <ul class="list-inline">
+      <li class="list-inline-item item1"><img src="./assets/shared/desktop/facebook.svg" alt=""></li>
+      <li class="list-inline-item item2"><img src="./assets/shared/desktop/twitter.svg" alt=""></li>
+      <li class="list-inline-item item3"><img src="./assets/shared/desktop/linkedin.svg" alt=""></li>
+    </ul>
+  </footer>
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+  <script src="./toggle.js"></script>
+</body>
 
 </html>
