--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
   <link rel="stylesheet" href="contact.css">
+  <link rel="stylesheet" href="normalize.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC`" crossorigin="anonymous">
   <title>Contact | PayAPI Website Challenge</title>
