--- a/about.html
+++ b/about.html
@@ -6,52 +6,68 @@
 
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
     <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/navbars/">
     <link rel="stylesheet" href="about.css">
-    <link rel="stylesheet" href="normalize.css">
   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Outfit:wght@300;400;600&family=Poppins:wght@300;500&family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&family=Poppins:wght@300;500&family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
   
 
     <title>About | PayAPI Website Challenge</title>
   </head>
 
+
+  <style>
+    .bd-placeholder-img {
+      font-size: 1.125rem;
+      text-anchor: middle;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      user-select: none;
+    }
+
+    @media (min-width: 768px) {
+      .bd-placeholder-img-lg {
+        font-size: 3.5rem;
+      }
+    }
+  </style>
+
   <body>
-    <nav>
 
-      <div class="logo">
-        <img src="./assets/shared/desktop/logo.svg" alt="">
-      </div>
-  
-      <div class="nav-list-container">
-        <ul class="list-inline">
-          <li class="list-inline-item">
-            <a href="pricing.html" class="text-muted">Pricing</a>
-          </li>
-  
-          <li class="list-inline-item">
-  
-            <a href="about.html" class="text-muted">About</a>
-          </li>
-          <li class="list-inline-item">
-  
-            <a href="contact.html" class="text-muted">Contact</a>
-          </li>
-        </ul>
-  
-        <button type="submit" class="butn-primary">Schedule a Demo</button>
-  
-      </div>
-  
-  
-      <div class="menu">
-        <img src="./assets/shared/mobile/menu.svg" alt="">
-      </div>
   
 
-
+    <nav class="navbar navbar-expand-md" aria-label="Fourth navbar example">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"><img src="./assets/shared/desktop/logo.svg" alt=""></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+          <!-- <span class="navbar-toggler-icon"></span> -->
+          <img src="./assets/shared/mobile/menu.svg" alt="">
+        </button>
+    
+        <div class="collapse navbar-collapse" id="navbarsExample04">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a href="pricing.html">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="contact.html">Contact</a>
+            </li>
+         
+            </li>
+          </ul>
+          <div>
+            <button type="button" class="nav-butn-primary">Schedule a demo</button>
+          </div>
+        </div>
+      </div>
     </nav>
-  
+
 
  <header class=" my-5">
 
@@ -203,7 +219,7 @@
       <ul class="footer-list">
         <li class="mb-4">
           <div class="footer-logo">
-            <img src="./assets/shared/desktop/logo.svg" alt="">
+            <a href="index.html"><img src="./assets/shared/desktop/logo-footer.svg" alt=""></a>
           </div>
         </li>
   
